# ai_assistant

./: .env  .gitignore  README.md  main.py  pyproject.toml
bot/: client.py
bot/cogs/: schedule.py  setup.py  week.py
calendar/: gcal.py
db/: database.py
image/: week_chart.py
notes/: BRAIN.md
scheduler/: ai.py
